<resources>

    <!--http error-->
    <string name="service_error">服务器出错</string>
    <string name="not_found">请求的资源不存在</string>
    <string name="timeout">请求超时</string>
    <string name="unexpected_error">未知错误</string>
    <string name="network_wrong">网络有问题</string>
    <!--http error-->


    <string name="app_name">BaseLibrary</string>
    <string name="title_activity_main">Kotlin Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotlin Library</string>
    <string name="nav_header_subtitle">summer.work.001@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Facebook-->
    <string name="facebook_app_id">206391860152378</string>
    <string name="fb_login_protocol_scheme">fb206391860152378</string>
    <!--Facebook-->

    <!-- hint -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Button -->
    <string name="btn_sign_in">登录</string>
    <string name="btn_sign_up">注册</string>
    <string name="btn_find_pwd">忘记密码</string>

</resources>
